<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLoadInter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnShowInter"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShowInter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_inter"
        app:layout_constraintEnd_toStartOf="@+id/btnLoadInter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDemandInter"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDemandInter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_demand_inter"
        app:layout_constraintEnd_toStartOf="@+id/btnShowInter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLoadNative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_native"
        app:layout_constraintEnd_toStartOf="@+id/btnLoadBanner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDemandInter" />

    <Button
        android:id="@+id/btnLoadBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnLoadNative"
        app:layout_constraintTop_toBottomOf="@+id/btnLoadInter" />

    <Button
        android:id="@+id/btnLoadAppOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_appopen"
        app:layout_constraintEnd_toStartOf="@+id/btnShowAppOpen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoadBanner" />

    <Button
        android:id="@+id/btnShowAppOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_appopen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnLoadAppOpen"
        app:layout_constraintTop_toBottomOf="@+id/btnLoadBanner" />

    <FrameLayout
        android:id="@+id/nativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bannerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/bannerLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>